# UdemyCmake_Template

./: .gitmodules
2_CMake/10_UnitTest/: CMakeLists.txt  Makefile  README.md
2_CMake/10_UnitTest/app/: CMakeLists.txt  main.cpp
2_CMake/10_UnitTest/cmake/: AddGitSubmodule.cmake  Docs.cmake
2_CMake/10_UnitTest/docs/: Doxyfile
2_CMake/10_UnitTest/src/my_lib/: CMakeLists.txt  Makefile  my_lib.cpp  my_lib.h
2_CMake/10_UnitTest/tests/: CMakeLists.txt  main.cpp
2_CMake/1_HelloWorld/: CMakeLists.txt  main.cpp
2_CMake/2_BasicProject/: CMakeLists.txt  main.cpp
2_CMake/3_IntermediateProject/: CMakeLists.txt
2_CMake/3_IntermediateProject/app/: Makefile  cmake_install.cmake
2_CMake/5_ConfigureFile/: CMakeLists.txt
2_CMake/5_ConfigureFile/app/: Makefile  cmake_install.cmake
2_CMake/5_ConfigureFile/configured/: config.hpp.in
2_CMake/5_ConfigureFile/src/: cmake_install.cmake
2_CMake/5_ConfigureFile/src/my_lib/: CMakeLists.txt
2_CMake/6_SourcesHeaders/: cmake_install.cmake
2_CMake/6_SourcesHeaders/app/: CMakeLists.txt  main.cpp
2_CMake/6_SourcesHeaders/configured/: Makefile
2_CMake/6_SourcesHeaders/src/my_lib/: my_lib.cpp
2_CMake/7_ExternalGit/: CMakeLists.txt
2_CMake/7_ExternalGit/app/: main.cpp
2_CMake/7_ExternalGit/configured/: cmake_install.cmake
2_CMake/7_ExternalGit/src/my_lib/: CMakeLists.txt  cmake_install.cmake
2_CMake/8_FetchContent/: CMakeLists.txt
2_CMake/8_FetchContent/src/my_lib/: my_lib.cpp
2_CMake/9_Doxygen/: CMakeLists.txt
2_CMake/9_Doxygen/configured/: CMakeLists.txt
2_CMake/9_Doxygen/src/: Makefile
2_CMake/9_Doxygen/src/my_lib/: my_lib.cpp
2_CMake/Final/: CMakeLists.txt
2_CMake/Final/src/my_lib/: ._CMakeLists.txt  ._my_lib.cc  ._my_lib.h
